# fatcnt

./: .gitignore  CMakeLists.txt  README.md
Testing/: TAG
Testing/20241130-0243/: Test.xml
docker/: dockerfile
include/: CMakeLists.txt
include/fatcnt/: main.hpp.in
include/fatcnt/com/: rrserialmc.hpp.in  serialusb.hpp.in  server.hpp.in
include/fatcnt/environment/: README.md  environment.hpp  environment.hpp.in  environmentProcessor.hpp.in  hwmodel.hpp  logging.hpp.in  processorbase.hpp.in  queues.hpp.in  rr_server.hpp.in  rrserial.hpp.in
include/fatcnt/environment/ai/: eai_training_data.hpp.in
include/fatcnt/events/: Event.hpp  Event.hpp.in  MspAuthKey.hpp  catagorizer.hpp.in  eventhandler.hpp.in  statushandler.hpp.in  uihandler.hpp.in
include/fatcnt/events/ai/: ai_predictor.hpp.in
include/fatcnt/events/catagorizer/: catagorizermapper.hpp.in  catagorizermapperbase.hpp.in  cmodes.hpp.in
include/fatcnt/events/ui/: jserializer.hpp.in
include/fatcnt/math/: ratio.hpp.in
include/fatcnt/protcols/common/: MspCommands.hpp  mspdirection.hpp
include/fatcnt/protocols/common/: mspcommands.hpp  mspcommands.hpp.in  mspdirection.hpp.in  mspsensors.hpp.in  mspversion.hpp  multitype.hpp.in
include/fatcnt/protocols/common/curators/rmultiwii/: rmultiwii_curator.hpp.in  rmultiwii_none_curator.hpp.in
include/fatcnt/protocols/common/curators/rrp/: curator.tmpl.hpp.in  event.tmpl.hpp.in  mspevent.hpp.in  rrpcurator.hpp.in  rrpcuratorabstract.hpp.in
include/fatcnt/protocols/rmultiwii/: crc.hpp.in  rmultiwii.hpp.in
include/fatcnt/protocols/rrp/: rrpstatus.hpp.in
include/fatcnt/state/: README.md  rrpqueues.hpp.in  rrqueues.hpp.in  state.hpp.in  stateiface.hpp.in  statemanageriface.hpp.in  statusprocessoriface.hpp.in
resources/: fatcnt.env.in  rrobot.pc.in
resources/actions/: OP_U1_MA_VCC.json
resources/manifests/: README.md  manifest.json.in  sku-ld-sku001.json  virtual.2.json  virtual.json
resources/var/: tset.1.lbl.data  tset.2.lbl.data  tset.2.trn.data
scripts/: build.sh  fatcnt.service  postinst  setup-docker.bash
src/fatcnt/: fatcnt.cpp  fatcnt.hpp  main.cpp
src/fatcnt/com/: external.hpp  rrserialmc.cpp  server.cpp  server.hpp
src/fatcnt/environment/: environmentProcessor.cpp  environmentProcessor.hpp  processorbase.cpp  processorbase.hpp
src/fatcnt/event/: eventhandler.hpp
src/fatcnt/eventprocessors/: EventProcessor.hpp
src/fatcnt/events/: README.md  ai_listener.hpp  catagorizer.cpp  catagorizer.hpp  eai_handler.cpp  eai_handler.hpp  eventhandler.cpp  eventhandler.hpp  hbridgecontroller.cpp  hbridgecontroller.hpp  serializer.hpp  statushandler.cpp  statushandler.hpp  uihandler.cpp  uihandler.hpp
src/fatcnt/events/ai/: ai_training_data.cpp  ai_training_data.hpp  ai_virtual_predictor.cpp
src/fatcnt/events/catagorizer/: catagorizermapperbase.hpp  catgorizermapper.hpp  ldsqu001mapper.cpp  ldsqu001mapper.hpp  mapperfactory.cpp  mapperfactory.hpp
src/fatcnt/events/msp104/: README.md  msp104_ctl_in.cpp  msp104_ctl_in.hpp  msp104_hbridge_serializer.cpp  msp104_hbridge_serializer.hpp
src/fatcnt/events/status/: statusprocessor.hpp
src/fatcnt/events/ui/: authenticator.hpp  jseralizer.hpp  jserializer.cpp  serializer.hpp
src/fatcnt/protocols/common/curators/rmultiwii/: rmultiwii_curator.cpp  rmultiwii_none_curation.cpp
src/fatcnt/protocols/common/curators/rrp/: msp_ident_curator.cpp  msp_mode_curator.cpp
src/fatcnt/protocols/rmultiwii/: rmultiwii.cpp
src/fatcnt/state/: rrqueues.cpp  rrqueues.hpp  statefactory.cpp  statefactory.hpp  statemanager.cpp  statemanager.hpp  statusprocessor.cpp  statusprocessor.hpp  statusprocessorfact.cpp  statusprocessorfact.hpp
src/fatctl/: fatctl.cpp  fatctl.h
src/fatctl/environment/: state.cpp  state.hpp  statefact.cpp  statefact.hpp
src/fatctl/environment/handlers/: handler.hpp  pi_pin_layout.hpp  skuld001_handler.cpp  skuld001_handler.hpp
src/fatctl/nn/: nn.cpp  nn.hpp
src/fatctl/ui/: client_manifest.cpp  client_manifest.hpp  connected_user.hpp  connection.cpp  connection.hpp  connection_processor.hpp  connection_request.cpp  connection_request.hpp  server.cpp  server.hpp  socket_env.hpp  ux_manifest.cpp  ux_manifest.hpp  websocket_status_code.hpp
test/: simplejwttest.cpp  simplesockettest.cpp  simpleteststate.cpp  simpleusbtest.cpp  test_ai_training_data.cpp  test_catagorizer.cpp  test_environmentprocessor.cpp  test_eventhandler.cpp  test_hbridgehandler.cpp  test_jserializer.cpp  test_msp104_ctl_in.cpp  test_msp104_hbridge_serializer.cpp  test_ratio.cpp  test_rmultiwii.cpp  test_rrpcurator.cpp  test_statefactory.cpp  test_status_processor.cpp  test_statushandler.cpp  test_uihandler.cpp  testarduinousb.cpp
test/fatcnt/events/: hbridgecontroller.hpp
test/fatcnt/events/ai/: ai_virtual_predictor.hpp
